small text changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-/* To learn more about the new file see: https://angular.io/config/tsconfig. */
+/* To learn more thing about the new file see: https://angular.io/config/tsconfig. */
 
 {
   "compileOnSave": false,
